--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -8,7 +8,7 @@
   editor = vim
   pager = less
   excludesfile = ~/.gitignore.base
-  autocrlf = false
+	autocrlf = input
   safecrlf = true
   precomposeunicode = true
 
@@ -35,3 +35,5 @@
 
 [pull]
   rebase = false
+[fetch]
+	prune = true
