--- a/dotfiles/.ideavimrc
+++ b/dotfiles/.ideavimrc
@@ -5,8 +5,12 @@ set surround
 
 " IdeaVim-EasyMotion
 " REF: https://github.com/AlexPl292/IdeaVim-EasyMotion
-let mapleader=" "
+"
+"let g:EasyMotion_do_mapping=0
+map f <Plug>(easymotion-prefix)
 set easymotion
+
+let mapleader=" "
 
 " IdeaVIMがサポートしているオプション
 " REF: https://github.com/JetBrains/ideavim/blob/master/doc/set-commands.md
@@ -49,7 +53,7 @@ lnoremap <C-J> <Esc>
 " mapmode-nvo
 noremap j gj
 noremap k gk
-noremap L g_
+noremap L $
 noremap H ^
 
 " mapmode-n
@@ -63,7 +67,7 @@ nnoremap K :<C-U>action QuickJavaDoc<CR>
 nnoremap <silent> <Space>r :<C-U>action Run<CR>
 nnoremap <silent> <Space>d :<C-U>action Debug<CR>
 nnoremap <silent> S :<C-U>action RenameElement<CR>
-nnoremap <silent> <Space>w :<C-U>action SaveAll<CR>
+nnoremap <silent> <Space><Space> :<C-U>action SaveAll<CR>
 nnoremap <C-Up> <C-A>
 nnoremap <C-Down> <C-X>
 nnoremap Q q
