--- a/dotfiles/.config/zed/settings.json
+++ b/dotfiles/.config/zed/settings.json
@@ -7,6 +7,11 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "agent": {
+    "model_parameters": [],
+    "play_sound_when_agent_done": true,
+    "version": "2"
+  },
   "vim_mode": true,
   "ui_font_size": 16,
   "buffer_font_size": 16,
